--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "json",
     "files"
   ],
-  "homepage": "https://github.com/owner/project#readme",
+  "homepage": "https://github.com/RomainLt/merge-json-files#readme",
   "repository": {
     "type": "git",
     "url": "https://github.com/RomainLt/merge-json-files"
